--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for MooseX-Types-HTTPMethod
 
+{{$NEXT}}
+
 0.002     2015-08-16 01:36:15Z
           - update some distribution tooling and improve tests
 
